<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_clr"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/d150"
            android:layout_alignParentBottom="true"
            android:scaleType="fitXY"
            android:src="@drawable/loginbg" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/d30"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d150">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:gravity="center|center_vertical"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/logo"
                            android:layout_width="@dimen/d80"
                            android:layout_height="@dimen/d80"
                            android:src="@drawable/nebras_logo" />

                        <TextView
                            android:id="@+id/app_name"
                            style="@style/txt_style"
                            android:layout_marginTop="@dimen/d10"
                            android:text="@string/app_name"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/d18"
                            android:textStyle="bold" />


                    </LinearLayout>
                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:id="@+id/email_login_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:hint="@string/prompt_email"
                                android:gravity="right"
                                android:inputType="textEmailAddress"
                                android:maxLines="1" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_password"
                                android:imeActionId="@+id/login"
                                android:gravity="right"
                                android:imeActionLabel="@string/prompt_password"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>

                        <Button
                            android:id="@+id/email_sign_up_button"
                            style="?android:textAppearanceSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/rounded_corner"
                            android:text="@string/action_sign_up"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>